--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:w": "tsc -w",
     "dev": "tsc -w",
-    "push": "yarn build; cp -R package.json README.md LICENSE dist; (cd dist && yarn publish --non-interactive); rm -rf dist/package.json dist/README.md dist/LICENSE",
+    "push": "yarn build; cp -R package.json README.md LICENSE dist; (cd dist && yarn publish); rm -rf dist/package.json dist/README.md dist/LICENSE",
     "lnk": "yarn build; cp -R package.json README.md LICENSE dist; (cd dist && yarn link)"
   },
   "license": "MIT",
@@ -16,7 +16,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@dustinrouillard/fastify-utilities": "^1.0.2",
+    "@dustinrouillard/fastify-utilities": "^1.2.3",
     "@types/ioredis": "^4.16.1",
     "cassandra-driver": "^4.5.2",
     "ioredis": "^4.16.3",
