--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustinrouillard/database-connectors",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Database connection library",
   "author": "Dustin Rouillard <code@dustin.sh>",
   "scripts": {
@@ -12,12 +12,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/ioredis": "^4.16.1",
+    "@types/node": "^14.14.22",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "@dustinrouillard/fastify-utilities": "^1.2.3",
-    "@types/ioredis": "^4.16.1",
     "cassandra-driver": "^4.5.2",
     "ioredis": "^4.16.3",
     "pg-promise": "^10.5.5"
